# riyo1.1

./: .env.example  .gitignore  ADMIN_SETUP.md  ADMIN_SYSTEM_SETUP.md  ARCHITECTURE.md  AUDIT.md  CASTING_SYSTEM.md  CAST_SETUP.md  ENTERPRISE_ARCH.md  FIREBASE_ANALYTICS_GUIDE.md  FIREBASE_INTEGRATION.md  FORGOT_PASSWORD_SETUP.md  HARDENING_ROADMAP.md  INTEGRATION.md  MICROSERVICES_EXPANSION.md  NOTIFICATION_ICON_SETUP.md  OPTIMIZATION.md  PLAYBACK_ENGINE.md  PUSH_NOTIFICATION_SETUP.md  R2_SETUP.md  README.md  RISKS_AND_TOOLS.md  SCRAPING_SYSTEM.md  STREAMING_SYSTEM.md  SYSTEM_FLOW.md  SYSTEM_GUIDE.md  SYSTEM_REDESIGN.md  VIDEO_PIPELINE.md  VIDEO_SYSTEM_DEEP_DIVE.md  api_service.dart  blueprint.md  final_crop.py  movie.dart  pubspec.yaml
android/: build.gradle.kts  gradle.properties
android/app/src/main/cpp/: CMakeLists.txt  video_engine.cpp
android/app/src/main/cpp/include/: av_sync.h  decoder.h  demuxer.h  network_loader.h  renderer.h  texture_renderer.h  video_engine.h
android/app/src/main/cpp/modules/: av_sync.cpp  buffer_manager.cpp  decoder.cpp  demuxer.cpp  network_loader.cpp  renderer.cpp  texture_renderer.cpp
android/app/src/main/cpp/src/: jni_bridge.cpp  native_bridge.cpp  video_engine.cpp
backend/: Dockerfile  FIREBASE_AUTH_SETUP.md  README.md  firebase-credentials.json  firebase-credentials.json.example  go.mod  go.sum  package-lock.json  package.json  (+2 more)
backend-node/: README.md  package-lock.json  package.json
src/native/riyo_player/: CMakeLists.txt
src/native/riyo_player/include/: riyo_player.h
src/native/riyo_player/src/: riyo_player.cpp
(+401 files in other folders)
